third_party/rust/quote/v1/crate/tests/ui/does-not-have-iter.stderr
error[E0308]: mismatched types
 --> $DIR/does-not-have-iter.rs:4:5
  |
4 |     quote!(#(a b)*);
  |     ^^^^^^^^^^^^^^^^
  |     |
  |     expected struct `HasIterator`, found struct `ThereIsNoIteratorInRepetition`
  |     expected due to this
  |
  = note: this error originates in the macro `$crate::quote_token_with_context` (in Nightly builds, run with -Z macro-backtrace for more info)
